tests/fail/smuggle.stderr
error[E0502]: cannot borrow `*api` as mutable because it is also borrowed as immutable
 --> tests/fail/smuggle.rs:6:9
  |
5 |         let t = api.make(true);
  |                 --- immutable borrow occurs here
6 |         api.without_guile(|| println!("{t:?}"));
  |         ^^^^-------------^^^^^^^^^^^^^^^^^^^^^^
  |         |   |
  |         |   immutable borrow later used by call
  |         mutable borrow occurs here

error[E0502]: cannot borrow `*api` as mutable because it is also borrowed as immutable
  --> tests/fail/smuggle.rs:11:9
   |
10 |         let t = api.make(true);
   |                 --- immutable borrow occurs here
11 |         api.without_guile(|| {});
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
12 |         println!("{t:?}");
   |                   ----- immutable borrow later used here
